[gd_scene load_steps=12 format=3 uid="uid://bj7deadl1mymv"]

[ext_resource type="Script" path="res://src/main.gd" id="1_fop30"]
[ext_resource type="PackedScene" uid="uid://dtv6rdkg03bvd" path="res://player.tscn" id="1_vkykl"]
[ext_resource type="PackedScene" uid="uid://b4nj28bgb0fhd" path="res://mob.tscn" id="2_o2qrm"]
[ext_resource type="FontFile" uid="uid://fqcfd82wo383" path="res://fonts/Montserrat-Medium.ttf" id="4_bh0kh"]
[ext_resource type="Script" path="res://src/ScoreLabel.gd" id="5_yjfeu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_lmaq8"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_mwt6o"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mw87r"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_oestn"]
material = SubResource("StandardMaterial3D_mw87r")

[sub_resource type="Curve3D" id="Curve3D_k4u2c"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -13.122, 0, 15, 0, 0, 0, 0, 0, 0, -13.122, 0, -14.123, 0, 0, 0, 0, 0, 0, 13.122, 0, -14.123, 0, 0, 0, 0, 0, 0, 13.122, 0, 15, 0, 0, 0, 0, 0, 0, -13.122, 0, 15),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_c7jn7"]
default_font = ExtResource("4_bh0kh")
default_font_size = 22

[node name="Main" type="Node"]
script = ExtResource("1_fop30")
mob_scene = ExtResource("2_o2qrm")

[node name="Ground" type="StaticBody3D" parent="." groups=["floor"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_lmaq8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_mwt6o")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_vkykl")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 19, 19)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
projection = 1
size = 19.0

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.122, 0, -14.123)
mesh = SubResource("CylinderMesh_oestn")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.122, 0, -14.123)
mesh = SubResource("CylinderMesh_oestn")
skeleton = NodePath("")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.122, 0, 15)
mesh = SubResource("CylinderMesh_oestn")
skeleton = NodePath("")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.122, 0, 15)
mesh = SubResource("CylinderMesh_oestn")
skeleton = NodePath("")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_k4u2c")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.122, 0, 15)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_c7jn7")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 33.0
offset_top = 29.0
offset_right = 97.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0 - Multiplier: 1"
script = ExtResource("5_yjfeu")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.25098, 0.25098, 0.745098)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Press 'Enter' to retry"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="landed" from="Player" to="UserInterface/ScoreLabel" method="_on_player_landed"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
